# artisan-pcgen

./: .gitignore  BACKLOG.md  Cargo.toml  DESIGN.md  EMIT_PLAN.md  PLANNING_CHECKLIST.md  SECTION_AWARE_LALRPOP_PLAN.md  SEMANTIC_INVENTORY.txt  TOKEN_INVENTORY.txt  build.rs  diff.txt  probe_paths.conf.example
src/: emit.rs  lib.rs  line_grammar.lalrpop
src/analysis/: fields.rs  metadata.rs  mod.rs  semantics.rs  signals.rs  token_policy.rs
src/file_emit/: entity_type_map.rs  error.rs  manifest.rs  mod.rs  pcc.rs  plan.rs  slugify.rs
src/parsing/: clause_grammar.lalrpop  line_codec.rs  line_grammar.lalrpop  mod.rs  modify_lexer.rs  modify_parser.rs  parser_tokens.rs
src/schema/: ability.rs  abilitycategory.rs  biosettings.rs  class.rs  classlevel.rs  companionmod.rs  datacontrol.rs  deity.rs  equipment.rs  feat.rs  gear.rs  kit.rs  migration.rs  mod.rs  modify.rs  pcc.rs  pcg.rs  race.rs  skill.rs  spell.rs  startpack.rs  subclass.rs  system.rs  template.rs  token_aliases.rs  variables.rs
tests/: file_emit.rs  semantic_roundtrip.rs  spell_drop_debug.rs
tests/fixtures/pcgen/: inventory_only_pcg_tokens.pcg  metadata_short_fallback.pcc  metadata_whitespace.pcc  roundtrip_ability.lst  roundtrip_ability_migration.lst  roundtrip_abilitycategory.lst  roundtrip_align_system.lst  roundtrip_biosettings_system.lst  roundtrip_character_profile.pcg  roundtrip_character_progression.pcg  roundtrip_class.lst  roundtrip_classlevel.lst  roundtrip_companionmod.lst  roundtrip_coverage.pcc  roundtrip_datacontrol_tokens.lst  roundtrip_deity.lst  roundtrip_desc_clear.lst  sample.lst  (+19 more)
