[package]
name = "artisan-pcgen"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22"

[dependencies]
artisan-core = { path = "../artisan-core" }
indexmap = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
logos = "0.14"
lalrpop-util = "0.22"
